Fixed contrast slider z-index
Former-commit-id: 35d147386ed27fda16317d9759ee47028323984b

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -304,6 +304,7 @@ input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover, but
 	border: none;
 	border-radius: 9px;
     background-color: #C0C0C0;
+	z-index: 0;	
 }
 
 #cSlideHandle
@@ -314,6 +315,7 @@ input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover, but
 	width: 18px;
 	height: 18px;
 	cursor: pointer;
+	z-index: 0;
 }
 
 #viewFrameCont
